# taraxa

./: CMakeLists.txt  README.md
cmake/: CMakeDemo-config.cmake
files/: tasks.json
include/: source_file.hpp
src/: source_file.cpp
tests/: CMakeLists.txt  example.cpp
